# basics_hs

./: .gitignore  README.md
docs/: INTRO.md
docs/basics/: PRINCIPLES.md
syntax/adt/: README.md  main.hs
syntax/applicative/: README.md  main.hs
syntax/condition/: README.md  main.hs
syntax/expression/: README.md  main.hs
syntax/expression/docs/: DETAILS.md
syntax/function/: README.md  main.hs
syntax/functor/: README.md
syntax/higher_order_functions/: README.md  main.hs
syntax/list/: README.md  main.hs
syntax/monad/: README.md  main.hs
syntax/monad_transformers/: README.md  main.hs
syntax/recursive_data_type/: README.md  main.hs
syntax/recursive_data_type/docs/: DETAILS.md
syntax/type/: README.md  main.hs
syntax/typeclass/: README.md  main.hs
syntax/typeclass_constraint/: README.md  main.hs
syntax/typeclass_deepen/: README.md  main.hs
syntax/variable/: README.md  main.hs
syntax/where/: README.md  main.hs
todo-app/: README.md  todo-app.cabal  todos.json
todo-app/app/: Main.hs
todo-app/src/: Storage.hs  Todo.hs
