cabal-version:       2.2

name:                todo-app
version:             0.1.0.0
description:         Simple TODO application in Haskell
homepage:            https://github.com/itsakeyfut/todo-app#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              itsakeyfut
maintainer:          example@example.com
copyright:           2025 itsakeyfut
category:            CLI
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/itsakeyfut/todo-app

library
  exposed-modules:
    Todo
    Storage
  other-modules:
    Paths_todo_app
  hs-source-dirs:
    src
  build-depends:
    base >=4.7 && <5,
    text,
    containers,
    time,
    aeson,
    bytestring,
    directory
  default-language: Haskell2010

executable todo-app-exe
  main-is: Main.hs
  other-modules:
    Paths_todo_app
  hs-source-dirs:
    app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >=4.7 && <5,
    todo-app,
    text,
    containers,
    time,
    aeson,
    bytestring,
    directory
  default-language: Haskell2010